<resources>
    <string name="app_name">ScaleFinder</string>
    <string name="title_text">ScaleFinder</string>
    <string name="f_e">F/E#</string>
    <string name="f_e_off">F/E#</string>
    <string name="g_toggle">G_toggle</string>
    <string name="g">G</string>
    <string name="g_off">G</string>
    <string name="d_toggle">D_toggle</string>
    <string name="d">D</string>
    <string name="d_off">D</string>
    <string name="c_b_toggle">C/B#_toggle</string>
    <string name="c_b">C/B#</string>
    <string name="c">C</string>
    <string name="c_shrp_toggle">C_shrp_toggle</string>
    <string name="c_db">C#/Db</string>
    <string name="c_db_off">C#/Db</string>
    <string name="d_sharp_toggle">D_sharp_toggle</string>
    <string name="d_eb">D#/Eb</string>
    <string name="d_eb_off">D#/Eb</string>
    <string name="f_sharp_toggle">F_sharp_toggle</string>
    <string name="f_gb">F#/Gb</string>
    <string name="f_gb_off">F#/Gb</string>
    <string name="gsharp_toggle">Gsharp_toggle</string>
    <string name="g_ab">G#/Ab</string>
    <string name="g_ab_off">G#/Ab</string>
    <string name="a_sharp_toggle">A_sharp_toggle</string>
    <string name="a_bb">A#/Bb</string>
    <string name="a_bb_off">A#/Bb</string>
    <string name="e_toggle">E_toggle</string>
    <string name="e_fb">E/Fb</string>
    <string name="e_fb_off">E/Fb</string>
    <string name="b_toggle">B_toggle</string>
    <string name="b">B</string>
    <string name="b_off">B</string>
    <string name="a_toggle">A_toggle</string>
    <string name="a">A</string>
    <string name="a_off">A</string>
</resources>